tests/NormalTests/paczka1/fuzzy1/78923668.err
Error in line 16: eDUEMKc A473 92,8
Error in line 8: tNqcKXFjg A473 89,0
Error in line 26: Vvn12iu44J A307 78,4
Error in line 36: NvgsBCoO A381 15,6
